<resources>
    <string name="app_name">Pay Provider Broadcasting</string>
    <string name="check_data">Check</string>
    <string name="start_pay1">Pay Provider 1: Consume Party Pay Provider</string>
    <string name="start_pay2">Pay Provider 2: Bank Of Bank Provider</string>
    <string name="text_number">Number Value</string>
    <string name="the_pay_provider">The Pay Provider</string>
    <string name="java_check">Java Check</string>
    <string name="java_text">Java Text</string>
    <string name="text_check">Check</string>
    <string name="info2">Info 2</string>
    <string name="info1">Info 1</string>
    <string name="java_activity">Java Activity</string>
</resources>