<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityJava">

    <TextView
        android:id="@+id/tvJavaTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_text"
        app:layout_constraintBottom_toTopOf="@+id/tvTextCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTextCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_check"
        app:layout_constraintBottom_toTopOf="@+id/btJavaCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btJavaCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>