<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55AABBCC"
    tools:context=".views.PayTerminalActivity">

    <TextView
        android:id="@+id/tvHeaderPay"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:text="@string/the_pay_provider"
        android:background="#ff00AA00"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/tvShowTime"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:text="Pay On Time"
        android:background="@drawable/round_color_a"
        android:layout_margin="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderPay"
        android:textSize="36sp"/>

    <Button
        android:id="@+id/btStartPayTestReceiverActivity"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_margin="12dp"
        android:background="#AAFFAA44"
        android:text="Test Receive Activity"
        app:layout_constraintBottom_toTopOf="@+id/tvChoosePayProvider"
        app:layout_constraintEnd_toStartOf="@+id/btJavaActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShowTime" />

    <Button
        android:id="@+id/bt_start_party_one_provider"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_margin="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/start_pay1"
        android:shadowColor="#ffAAAAAA"
        app:layout_constraintEnd_toStartOf="@id/bt_start_bank_of_bank_provider"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/bt_start_bank_of_bank_provider"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_margin="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/start_pay2"
        android:shadowColor="#ffAAAAAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/bt_start_party_one_provider"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvChoosePayProvider"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#ff4488ff"
        android:text="Choose Pay Provider"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_start_party_one_provider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:ems="10"
        android:hint="@string/text_number"
        android:text="45027022"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvChoosePayProvider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btStartPayTestReceiverActivity" />

    <Button
        android:id="@+id/btJavaActivity"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_margin="12dp"
        android:text="@string/java_activity"
        app:layout_constraintBottom_toTopOf="@+id/tvChoosePayProvider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShowTime" />

</androidx.constraintlayout.widget.ConstraintLayout>